--- a/Dev/Dev2.Activities.Tests/Dev2.Activities.Tests.csproj
+++ b/Dev/Dev2.Activities.Tests/Dev2.Activities.Tests.csproj
@@ -479,10 +479,6 @@
       <Project>{7925b0c6-88dc-49a4-bbe1-c0550987f63a}</Project>
       <Name>Warewolf.TestingDotnetDllCascading</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Dev2.Server\Dev2.Server.csproj">
-      <Project>{87aefd04-29f3-45b6-a7c6-4161f9190876}</Project>
-      <Name>Dev2.Server</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Dev2.Studio\App.config">
@@ -543,7 +539,7 @@
   <ItemGroup />
   <PropertyGroup>
     <PostBuildEvent>
-      if exist "$(SolutionDir)Dev2.Activities.Tests\bin\Debug\net6.0-windows\win\Dev2.Activities.Tests.dll" and not exist "$(SolutionDir)Dev2.Activities.Tests\bin\Debug\net6.0-windows\win\SQLite.Interop.dll" (
+      if exist "$(SolutionDir)Dev2.Activities.Tests\bin\Debug\net6.0-windows\win\Dev2.Activities.Tests.dll" if not exist "$(SolutionDir)Dev2.Activities.Tests\bin\Debug\net6.0-windows\win\SQLite.Interop.dll" (
       echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\runtimes\win-x64\native\SQLite.Interop.dll" "$(SolutionDir)Dev2.Activities.Tests\bin\Debug\net6.0-windows\win"
       )
     </PostBuildEvent>
