--- a/Dev/Dev2.Runtime.Tests/Dev2.Runtime.Tests.csproj
+++ b/Dev/Dev2.Runtime.Tests/Dev2.Runtime.Tests.csproj
@@ -726,7 +726,7 @@
     <PostBuildEvent>
 		taskkill /f /im Warewolf.COMIPC.exe /fi "STATUS eq RUNNING"
 		taskkill /f /im Warewolf.COMIPC.vshost.exe /fi "STATUS eq RUNNING"
-		if exist "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win\Dev2.Runtime.Tests.dll" and not exist "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win\SQLite.Interop.dll" (
+		if exist "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win\Dev2.Runtime.Tests.dll" if not exist "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win\SQLite.Interop.dll" (
 		echo D | xcopy /Y /E /F /D "$(SolutionDir)Binaries\Warewolf.COMIPC.exe_v4.8" "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win\Warewolf.COMIPC.exe_v4.8"
 		echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\runtimes\win-x64\native\SQLite.Interop.dll" "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win"
 		)
