--- a/Dev/Warewolf.Tools.Specs/Warewolf.Tools.Specs.csproj
+++ b/Dev/Warewolf.Tools.Specs/Warewolf.Tools.Specs.csproj
@@ -902,7 +902,7 @@
   <ItemGroup />
   <PropertyGroup>
     <PostBuildEvent>
-    if exist "$(SolutionDir)Warewolf.Tools.Specs\bin\Debug\net6.0-windows\win\Warewolf.Tools.Specs.dll" and not exist "$(SolutionDir)Warewolf.Tools.Specs\bin\Debug\net6.0-windows\win\SQLite.Interop.dll" (
+    if exist "$(SolutionDir)Warewolf.Tools.Specs\bin\Debug\net6.0-windows\win\Warewolf.Tools.Specs.dll" if not exist "$(SolutionDir)Warewolf.Tools.Specs\bin\Debug\net6.0-windows\win\SQLite.Interop.dll" (
     echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\runtimes\win-x64\native\SQLite.Interop.dll" "$(SolutionDir)Warewolf.Tools.Specs\bin\Debug\net6.0-windows\win"
     )
   </PostBuildEvent>
