--- a/Dev/Dev2.Server/Dev2.Server.csproj
+++ b/Dev/Dev2.Server/Dev2.Server.csproj
@@ -205,6 +205,10 @@
       <Project>{2C4E3DC6-2195-4486-894D-8351B066D8CA}</Project>
       <Name>Warewolf.Auditing</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Warewolf.COMIPC.Client\Warewolf.COMIPC.Client.csproj">
+      <Project>{bca6f2b3-c102-45b5-8f64-f0cce2533f1f}</Project>
+      <Name>Warewolf.COMIPC.Client</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Warewolf.Common\Warewolf.Common.csproj">
       <Project>{6c6d687d-ec18-4ab9-8f2e-07c9fbdbca97}</Project>
       <Name>Warewolf.Common</Name>
@@ -383,13 +387,23 @@
   <PropertyGroup>
     <PostBuildEvent>
     if exist "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Warewolf Server.exe" (
+    echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - Release\Resources" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Resources"
+    echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - Release" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Resources - Release"
+    echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - ServerTests" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Resources - ServerTests"
+    echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - UITests" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Resources - UITests"
+    echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - Load" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Resources - Load"
+    if not exist "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\_PublishedWebsites\Dev2.Web" echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Web2" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\_PublishedWebsites\Dev2.Web"
+    echo D | xcopy /Y /E /F /D "$(SolutionDir)Binaries\Warewolf.COMIPC.exe_v4.8" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Warewolf.COMIPC.exe_v4.8"
     echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\runtimes\win-x64\native\SQLite.Interop.dll" "$(SolutionDir)Dev\Dev2.Server\bin\Debug\net6.0-windows"
     )
     if exist "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\Warewolf Server.exe" (
+    echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - Release\Resources" "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\Resources"
     echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - Release" "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\Resources - Release"
+    echo D | xcopy /Y /E /F /D "$(SolutionDir)Binaries\Warewolf.COMIPC.exe_v4.8" "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\Warewolf.COMIPC.exe_v4.8"
     echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\runtimes\win-x64\native\SQLite.Interop.dll" "$(SolutionDir)Dev\Dev2.Server\bin\Release\net6.0-windows"
     )
-    </PostBuildEvent>
+    taskkill /f /im Warewolf.COMIPC.exe /fi "STATUS eq RUNNING"
+    taskkill /f /im Warewolf.COMIPC.vshost.exe /fi "STATUS eq RUNNING"</PostBuildEvent>
     <StartupObject>Dev2.Program</StartupObject>
     <IsTestProject>false</IsTestProject>
     <UserSecretsId>61f81da6-a240-4f74-ac27-c901cbc2e6bd</UserSecretsId>
