7486-Evaluate built-in .NET6 replacement for SaxonCS
Created XPathParserNetCore (a replacement of Saxon)
Updated Tests category (commented our or removed attribute so that build can run these test)

--- a/Dev/Dev2.Data/Dev2.Data.csproj
+++ b/Dev/Dev2.Data/Dev2.Data.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Dev2DecisionComparer.cs" />
     <Compile Include="Dev2WorkflowSettingsTO.cs" />
     <Compile Include="NativeMethods.cs" />
+    <Compile Include="Parsers\XPathParserNetCore.cs" />
     <Compile Include="PathOperations\ActivityIOBrokerMainDriver.cs" />
     <Compile Include="PathOperations\ActivityIOBrokerBaseDriver.cs" />
     <Compile Include="PathOperations\ActivityIOBrokerValidatorDriver.cs" />
