DevOps-introduce new job for running CreateWindowsServerSource seperately with minimized server resources

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -1246,7 +1246,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -ExcludeCategories ExampleWorkflowExecution,DateTimeExampleWorkflowExecution,StudioTestFrameworkWithScriptingTools,StudioTestFrameworkWithHelloWorldWorkflow,StudioTestFrameworkWithHTTPWebPostTools,StudioTestFrameworkWithHTTPWebGetTools,StudioTestFrameworkWithHTTPWebDeleteTools,MSSql,DatabaseWorkflowExecution,ExecuteInBrowser,StudioTestFrameworkWithUtilityTools,StudioTestFrameworkWithSharepointTools,SubworkflowOracleExecution,RabbitMQWorkflowExecution,WorkflowMerging,StudioTestFrameworkWithFileAndFolderTools,DatabaseSubworkflowExecution,StudioTestFrameworkWithDatabaseTools,StudioTestFrameworkWithSubworkflow,Scheduler,StudioTestFrameworkWithHTTPWebPutTools,StudioTestFrameworkWithDropboxTools,SubworkflowExecution,StudioTestFrameworkWithDataTools,StudioTestFrameworkWithDeletedResources,StudioTestFrameworkWithRabbitMQTools,WorkflowExecution,StudioTestFramework,NestedForEachExecution,WarewolfSearch,AssignWorkflowExecution,WorkflowExecutionLogging,StudioTestFrameworkWithHTTPWebTools,CompositionLoadTests,COMIPCSaxonCSandStudioTests,WFWithRabbitMqConsumeTimeout5 -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -ExcludeCategories ExampleWorkflowExecution,DateTimeExampleWorkflowExecution,StudioTestFrameworkWithScriptingTools,StudioTestFrameworkWithHelloWorldWorkflow,StudioTestFrameworkWithHTTPWebPostTools,StudioTestFrameworkWithHTTPWebGetTools,StudioTestFrameworkWithHTTPWebDeleteTools,MSSql,DatabaseWorkflowExecution,ExecuteInBrowser,StudioTestFrameworkWithUtilityTools,StudioTestFrameworkWithSharepointTools,SubworkflowOracleExecution,RabbitMQWorkflowExecution,WorkflowMerging,StudioTestFrameworkWithFileAndFolderTools,DatabaseSubworkflowExecution,StudioTestFrameworkWithDatabaseTools,StudioTestFrameworkWithSubworkflow,Scheduler,StudioTestFrameworkWithHTTPWebPutTools,StudioTestFrameworkWithDropboxTools,SubworkflowExecution,StudioTestFrameworkWithDataTools,StudioTestFrameworkWithDeletedResources,StudioTestFrameworkWithRabbitMQTools,WorkflowExecution,StudioTestFramework,NestedForEachExecution,WarewolfSearch,AssignWorkflowExecution,WorkflowExecutionLogging,StudioTestFrameworkWithHTTPWebTools,CompositionLoadTests,COMIPCSaxonCSandStudioTests,WFWithRabbitMqConsumeTimeout5,CreateWindowsServerSource -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
 
     - task: PublishBuildArtifacts@1
@@ -1262,6 +1262,39 @@ stages:
         testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
         failTaskOnFailedTests: true
         testRunTitle: 'Other Activities Specs'
+        
+    - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
+  
+  - job: Create_Windows_Server_Source
+    displayName: 'Create Windows Server Source'
+  
+    steps:
+    - checkout: none
+    
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        buildType: 'current'
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)'
+  
+    - script: |
+        cd /d "$(Agent.BuildDirectory)"
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category CreateWindowsServerSource -PreTestRunScript "StartAsService.ps1 -Cleanup" -PostTestRunScript ReverseDeployLog.ps1
+      displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'Create_Windows_Server_Source_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
+        
+    - task: PublishTestResults@2
+      inputs:
+        testRunner: VSTest
+        testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
+        failTaskOnFailedTests: true
+        testRunTitle: 'Create Windows Server Source'
         
     - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
   
