7506-license the server under test in the builds

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -17,6 +17,26 @@ stages:
         filePath: '$(Agent.BuildDirectory)/s/Compile.ps1'
         arguments: '-AcceptanceTesting -MSBuildPath "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe"'
         displayName: 'Compile'
+
+    - powershell: |
+       @"
+                            <?xml version="1.0" encoding="utf-8"?>
+                                    <subscriptionSettings>
+                                              <add key="CustomerId" value="$env:ChargeBeeCustomerIdValue" />
+                                                        <add key="SubscriptionId" value="$env:ChargeBeeSubscriptionIdValue" />
+                                                                  <add key="Status" value="Active" />
+                                                                            <add key="PlanId" value="developer" />
+                                                                                      <add key="SubscriptionKey" value="$env:ChargeBeeSubscriptionKeyValue" />
+                                                                                                <add key="SubscriptionSiteName" value="warewolf-test" />
+                                                                                                          <add key="StopExecutions" value="false" />
+                                                                                                                  </subscriptionSettings>
+                                                                                                                          "@ | Out-File -LiteralPath "$(Agent.BuildDirectory)\s\bin\AcceptanceTesting\net48\Warewolf License.secureconfig" -Encoding utf8 -Force
+                                                                                                                                displayName: 'Programmatically License The Server Under Test'
+                                                                                                                                      env:
+                                                                                                                                              ChargeBeeCustomerIdValue: $(ChargeBeeCustomerId)
+                                                                                                                                                      ChargeBeeSubscriptionIdValue: $(ChargeBeeSubscriptionId)
+                                                                                                                                                              ChargeBeeSubscriptionKeyValue: $(ChargeBeeSubscriptionKey)
+
   
     - task: DeleteFiles@1
       inputs:
