--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -30,7 +30,7 @@ stages:
           <add key="SubscriptionSiteName" value="warewolf-test" />
           <add key="StopExecutions" value="false" />
         </subscriptionSettings>
-        "@ | Out-File -LiteralPath "$(Agent.BuildDirectory)\s\bin\AcceptanceTesting\net48\Warewolf License.secureconfig" -Encoding utf8 -Force
+        "@ | Out-File -LiteralPath "$(Agent.BuildDirectory)\s\bin\AcceptanceTesting\Warewolf License.secureconfig" -Encoding utf8 -Force
       displayName: 'Programmatically License The Server Under Test'
       env:
         ChargeBeeCustomerIdValue: $(ChargeBeeCustomerId)
