7499 - COMIPC Deprecation - updated the server side code to handle COMIPC request at server side. For existing WF, the dsfdllactivity will return with bad request(400) with message as "COM DLL tool is deprecated"
- COM dll listing will not wont list any dll listing
- COM Sources will be blank
- COM namespaces will be blank
- COM Actions will be blank

--- a/Dev/Warewolf.COMIPC.Tests/Warewolf.COMIPC.Tests.csproj
+++ b/Dev/Warewolf.COMIPC.Tests/Warewolf.COMIPC.Tests.csproj
@@ -43,8 +43,12 @@
     <Compile Include="..\AssemblyCommonInfo.cs" Condition="Exists('..\AssemblyCommonInfo.cs')">
       <Link>Properties\AssemblyCommonInfo.cs</Link>
     </Compile>
+    <Compile Include="ComPlugin\ComPluginRuntimeHandlerTest.cs" />
+    <Compile Include="ComPlugin\ComPluginServiceExecutionFactoryTest.cs" />
     <Compile Include="IpcClientTests.cs" />
+    <Compile Include="ServerLifecycleManagerServiceTests.cs" />
     <Compile Include="WarewolfComIpcTests.cs" />
+    <EmbeddedResource Include="ComPlugin\SystemWOW6432NodeCLSIDadodbConnection.reg" />
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
