--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -65,7 +65,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -ExcludeProjects Dev2.Integration.Tests,Dev2.Studio.Core.Tests,Dev2.Infrastructure.Tests,Warewolf.UI.Tests,Warewolf.Logger.Tests,Warewolf.Studio.ViewModels.Tests,Warewolf.Web.UI.Tests,Warewolf.Storage.Tests,Warewolf.Auditing.Tests,Dev2.Activities.Tests,Dev2.Activities.Designers.Tests -ExcludeCategories CannotParallelize,ResourceCatalog_LoadTests,PluginRuntimeHandler,GatherSystemInformation,LocalSchedulerAdmin,Multithread,AnonymousRedis,COMIPCSaxonCSandStudioTests,WFWithRabbitMqConsumeTimeout5 -UseRegionalSettings
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -ExcludeProjects Dev2.Integration.Tests,Dev2.Studio.Core.Tests,Dev2.Infrastructure.Tests,Warewolf.UI.Tests,Warewolf.Logger.Tests,Warewolf.Studio.ViewModels.Tests,Warewolf.Web.UI.Tests,Warewolf.Storage.Tests,Warewolf.Auditing.Tests,Dev2.Activities.Tests,Dev2.Activities.Designers.Tests -ExcludeCategories CannotParallelize,ResourceCatalog_LoadTests,PluginRuntimeHandler,GatherSystemInformation,LocalSchedulerAdmin,Multithread,AnonymousRedis,COMIPCSaxonCSandStudioTests,WFWithRabbitMqConsumeTimeout5,WarewolfCOMIPCClient_Deprecated -UseRegionalSettings
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -91,7 +91,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Tests -ExcludeCategories COMIPCSaxonCSandStudioTests -UseRegionalSettings
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Tests -ExcludeCategories COMIPCSaxonCSandStudioTests,WarewolfCOMIPCClient_Deprecated -UseRegionalSettings
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
