7502-include this secure.config file that Sehul has given me

--- a/Dev/Dev2.Server/Dev2.Server.csproj
+++ b/Dev/Dev2.Server/Dev2.Server.csproj
@@ -137,6 +137,9 @@
     <None Include="AddAdminFromEnvironmentVariablesAndStart.bat">
      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="secure.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Compile Include="ServerLifecycleManager.cs" />
   </ItemGroup>
   <ItemGroup>
