--- a/Dev/Dev2.Server/Dev2.Server.csproj
+++ b/Dev/Dev2.Server/Dev2.Server.csproj
@@ -391,6 +391,7 @@
     <PostBuildEvent>
     if exist "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Warewolf Server.exe" (
     	echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - Release\Resources" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Resources"
+    	echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - Release\Tests" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Tests"
     	if not exist "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\_PublishedWebsites\Dev2.Web" echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Web2" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\_PublishedWebsites\Dev2.Web"
 		echo D | xcopy /Y /E /F /D "$(SolutionDir)Binaries\Warewolf.COMIPC.exe_v4.8" "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\Warewolf.COMIPC.exe_v4.8"
 		if not exist "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\SQLite.Interop.dll" (
@@ -399,6 +400,7 @@
     )
     if exist "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\Warewolf Server.exe" (
     	echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - Release\Resources" "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\Resources"
+    	echo D | xcopy /Y /E /F /D "$(SolutionDir)Resources - Release\Tests" "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\Tests"
 		echo D | xcopy /Y /E /F /D "$(SolutionDir)Binaries\Warewolf.COMIPC.exe_v4.8" "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\Warewolf.COMIPC.exe_v4.8"
 		if not exist "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\SQLite.Interop.dll" (
 			echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows\runtimes\win-x64\native\SQLite.Interop.dll" "$(SolutionDir)Dev2.Server\bin\Release\net6.0-windows"
