7506-use the powershell startup script in Docker containers

--- a/Dev/Dev2.Server/Dockerfile
+++ b/Dev/Dev2.Server/Dockerfile
@@ -1,9 +1,9 @@
 FROM mcr.microsoft.com/windows/servercore:ltsc2019
 USER ContainerAdministrator
 
-RUN curl -o dotnet-sdk-installer.exe https://dotnetcli.azureedge.net/dotnet/Sdk/6.0.413/dotnet-sdk-6.0.413-win-x64.exe
-RUN dotnet-sdk-installer.exe /quiet /install
-RUN del dotnet-sdk-installer.exe
+RUN curl -o dotnet-core-installer.exe https://dotnetcli.azureedge.net/dotnet/Sdk/6.0.413/dotnet-sdk-6.0.413-win-x64.exe
+RUN dotnet-core-installer.exe /quiet /install
+RUN del dotnet-core-installer.exe
 
 EXPOSE 3142
 EXPOSE 3143
@@ -21,4 +21,4 @@ RUN xcopy /s /y "C:\Server\Resources" "C:\programdata\Warewolf\Resources"
 RUN mkdir "programdata\Warewolf\Tests"
 RUN xcopy /s /y "C:\Server\Tests" "C:\programdata\Warewolf\Tests"
 
-CMD .\Server\AddAdminFromEnvironmentVariablesAndStart.bat
+CMD ["powershell", ".\\Server\\StartAsService.ps1 -NoExit"]
