--- a/Dev/Dev2.Server/userServerSettings.config
+++ b/Dev/Dev2.Server/userServerSettings.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <appSettings>
-  <add key="webServerPort" value="3142" />
-  <add key="webServerSslPort" value="3143" />
-  <add key="sslCertificateName" value="WarewolfServer.pfx" />
-  <add key="CollectUsageStats" value="False" />
-  <add key="DaysToKeepTempFiles" value="2" />
+	<add key="webServerPort" value="3142" />
+	<add key="webServerSslPort" value="3143" />
+	<add key="sslCertificateName" value="WarewolfServer.cer" />
+	<add key="sslPFXCertificateName" value="WarewolfServer.pfx" />
+	<add key="sslPFXCertificatePassword" value="456123" />
+	<add key="CollectUsageStats" value="False" />
+	<add key="DaysToKeepTempFiles" value="2" />
 </appSettings>
