7509- SSLCertificate Install SSL Code Cleanup, introduction of variable "enableSSLCertificateTrust" to Add Certificate to trusted ROOT or not SetCorrect flow to consider if certificate to be generated or not, And added to trusted root or not

--- a/Dev/Dev2.Server/userServerSettings.config
+++ b/Dev/Dev2.Server/userServerSettings.config
@@ -4,7 +4,7 @@
 	<add key="webServerSslPort" value="3143" />
 	<add key="sslCertificateName" value="WarewolfServer.cer" />
 	<add key="sslPFXCertificateName" value="WarewolfServer.pfx" />
-	<add key="sslPFXCertificatePassword" value="456123" />
+	<add key="enableSSLCertificateTrust" value="False"/>
 	<add key="CollectUsageStats" value="False" />
 	<add key="DaysToKeepTempFiles" value="2" />
 </appSettings>
