Set trigger to manual

--- a/Dev/.azure/compatability-analysis-pipeline.yml
+++ b/Dev/.azure/compatability-analysis-pipeline.yml
@@ -1,9 +1,4 @@
-schedules:
-- cron: "0 0 * * *"
-  displayName: Daily midnight build
-  branches:
-    include:
-    - "*"
+trigger: none
 
 pool:
   vmImage: 'windows-2022'
