--- a/Dev/Dev2.Common/Dev2.Common.csproj
+++ b/Dev/Dev2.Common/Dev2.Common.csproj
@@ -144,6 +144,7 @@
     <Compile Include="ExtMethods\StringExtension.cs" />
     <Compile Include="ExtMethods\TypeExtensions.cs" />
     <Compile Include="FileStreamFactory.cs" />
+    <Compile Include="HttpClientException.cs" />
     <Compile Include="WebRequestHeadersHelper.cs" />
     <Compile Include="Wrappers\EnvironmentWrapper.cs" />
     <Compile Include="Wrappers\FileSystemWatcherWrapper.cs" />
