--- a/Dev/Dev2.SignalR.Wrappers.New/Dev2.SignalR.Wrappers.New.csproj
+++ b/Dev/Dev2.SignalR.Wrappers.New/Dev2.SignalR.Wrappers.New.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HubConnectionStateExtensions.cs" />
     <Compile Include="HubConnectionWrapper.cs" />
     <Compile Include="HubProxyWrapper.cs" />
   </ItemGroup>
@@ -89,9 +90,7 @@
     <PackageReference Include="log4net">
       <Version>2.0.12</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNet.SignalR.Client">
-      <Version>2.4.3</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.10" />
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.2</Version>
     </PackageReference>
