DevOps-using net 6 server under test in these tests

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3495,10 +3495,21 @@ stages:
         buildType: 'current'
         artifactName: 'TestBinaries'
         targetPath: '$(Agent.BuildDirectory)'
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        source: 'specific'
+        project: '$(System.TeamProjectId)'
+        pipeline: 1
+        runVersion: 'latestFromBranch'
+        branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
+        allowPartiallySucceededBuilds: true
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -ExcludeCategories ResourcePermissionsSecurity,OverlappingUserGroupsPermissionsSecurity,ConflictingViewPermissionsSecurity,ConflictingExecutePermissionsSecurity,ConflictingContributeViewExecutePermissionsSecurity,ConflictingViewExecutePermissionsSecurity,NoConflictingPermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -ExcludeCategories ResourcePermissionsSecurity,OverlappingUserGroupsPermissionsSecurity,ConflictingViewPermissionsSecurity,ConflictingExecutePermissionsSecurity,ConflictingContributeViewExecutePermissionsSecurity,ConflictingViewExecutePermissionsSecurity,NoConflictingPermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3521,10 +3532,21 @@ stages:
         buildType: 'current'
         artifactName: 'TestBinaries'
         targetPath: '$(Agent.BuildDirectory)'
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        source: 'specific'
+        project: '$(System.TeamProjectId)'
+        pipeline: 1
+        runVersion: 'latestFromBranch'
+        branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
+        allowPartiallySucceededBuilds: true
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ResourcePermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ResourcePermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3547,10 +3569,21 @@ stages:
         buildType: 'current'
         artifactName: 'TestBinaries'
         targetPath: '$(Agent.BuildDirectory)'
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        source: 'specific'
+        project: '$(System.TeamProjectId)'
+        pipeline: 1
+        runVersion: 'latestFromBranch'
+        branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
+        allowPartiallySucceededBuilds: true
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category OverlappingUserGroupsPermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category OverlappingUserGroupsPermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3573,10 +3606,21 @@ stages:
         buildType: 'current'
         artifactName: 'TestBinaries'
         targetPath: '$(Agent.BuildDirectory)'
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        source: 'specific'
+        project: '$(System.TeamProjectId)'
+        pipeline: 1
+        runVersion: 'latestFromBranch'
+        branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
+        allowPartiallySucceededBuilds: true
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingViewPermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingViewPermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3599,10 +3643,21 @@ stages:
         buildType: 'current'
         artifactName: 'TestBinaries'
         targetPath: '$(Agent.BuildDirectory)'
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        source: 'specific'
+        project: '$(System.TeamProjectId)'
+        pipeline: 1
+        runVersion: 'latestFromBranch'
+        branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
+        allowPartiallySucceededBuilds: true
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingExecutePermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingExecutePermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3625,10 +3680,21 @@ stages:
         buildType: 'current'
         artifactName: 'TestBinaries'
         targetPath: '$(Agent.BuildDirectory)'
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        source: 'specific'
+        project: '$(System.TeamProjectId)'
+        pipeline: 1
+        runVersion: 'latestFromBranch'
+        branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
+        allowPartiallySucceededBuilds: true
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingContributeViewExecutePermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingContributeViewExecutePermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3651,10 +3717,21 @@ stages:
         buildType: 'current'
         artifactName: 'TestBinaries'
         targetPath: '$(Agent.BuildDirectory)'
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        source: 'specific'
+        project: '$(System.TeamProjectId)'
+        pipeline: 1
+        runVersion: 'latestFromBranch'
+        branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
+        allowPartiallySucceededBuilds: true
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingViewExecutePermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category ConflictingViewExecutePermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3677,10 +3754,21 @@ stages:
         buildType: 'current'
         artifactName: 'TestBinaries'
         targetPath: '$(Agent.BuildDirectory)'
+
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        source: 'specific'
+        project: '$(System.TeamProjectId)'
+        pipeline: 1
+        runVersion: 'latestFromBranch'
+        branchName: 'refs/heads/7232-WorkflowFoundationCompatibilityCheck'
+        allowPartiallySucceededBuilds: true
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)\Net6Server'
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category NoConflictingPermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -Category NoConflictingPermissionsSecurity -PreTestRunScript ".\Net6Server\StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
